syntax = 'proto3';
package trac.metadata;

option java_package = "com.accenture.trac.common.metadata";
option java_multiple_files = true;

import "trac/metadata/primitive.proto";
import "trac/metadata/data.proto";
import "trac/metadata/model.proto";
import "trac/metadata/flow.proto";
import "trac/metadata/job.proto";


enum ObjectType {
    NONE_OBJECT = 0;
    DATA = 1;
    MODEL = 2;
    FLOW = 3;
    JOB = 4;
    JOB_OUTPUT = 5;
    CUSTOM = 6;
    FILE = 7;
}

message ObjectHeader {

    ObjectType objectType = 1;
    UUID objectId = 2;
    int32 objectVersion = 3;
}

message ObjectDefinition {

    ObjectHeader header = 1;

    oneof definition {
        DataDefinition data = 2;
        ModelDefinition model = 3;
        FlowDefinition flow = 4;
        JobDefinition job = 5;
    }
}
